--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,26 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/calculations_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="=0"
+        android:textAlignment="viewEnd"
+        android:textColor="#9C9B9B"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
         android:textAlignment="viewEnd"
         android:textSize="48sp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintBottom_toTopOf="@+id/calculations_result"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
@@ -27,6 +39,36 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/memory_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tag="memory"
+                android:layout_weight="1"
+                android:text="M+" />
+
+            <Button
+                android:id="@+id/memory_read"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tag="memory"
+                android:layout_weight="1"
+                android:text="MR" />
+
+            <Button
+                android:id="@+id/memory_clean"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:tag="memory"
+                android:text="MC" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
