--- a/lab16-multyActivityApp/mainWork/app/src/main/res/layout/activity_main.xml
+++ b/lab16-multyActivityApp/mainWork/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFC107"
     tools:context=".MainActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
 
+        android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="50dp"
+        android:src="@drawable/photo"
+        app:civ_border_color="#FF000000"
+
+        app:civ_border_width="2dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        android:layout_width="200dp"
-
-        android:src="@drawable/photo"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#FF000000"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/number"
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
-        android:text="PhoneNumber"
+        android:text="PhoneNumber: "
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/e_mail" />
@@ -45,11 +46,11 @@
 
     <TextView
         android:id="@+id/shortCV"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
-        android:text="Info:"
+        android:text="Info: "
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/number" />
