make activities prettier

--- a/lab16-multyActivityApp/mainWork/app/src/main/res/layout/detailed_cvactivity.xml
+++ b/lab16-multyActivityApp/mainWork/app/src/main/res/layout/detailed_cvactivity.xml
@@ -9,16 +9,18 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#009688"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/detailedCV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CV details"
+            android:textColor="#F3EFEF"
             android:textSize="20sp" />
     </ScrollView>
 
